# PaintingClassification

./: .gitignore  README.md  get_new_data.py  interface.py  metric_manager.py  paintings_dataset.py  profiler.py  pyproject.toml  requirements.txt  trainer.py
.github/workflows/: github-actions.yml
experiments_notebooks/: TRAINING_2bRNN_withAugmentation.ipynb  TRAINING_2bRNN_withNoise.ipynb
models/: CustomResnet50.py  tw_branch_plus_feedforward.py  two_branch_rnn.py
research/: 20250526_example.py  20250605_rensnet.py  20250610 _embeddings_projector.py
research/joel/: 20250608_training.ipynb  20250611_trainer_resnet.ipynb  20250617_weights.ipynb
transformations/: transformations.py
