[tool.poetry]
name = "paintings_classification"
version = "0.1.0"
description = ""
authors = ["nnoya <nnoya@fing.edu.uy>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.3"
numpy = "^2.2.6"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
