[tool.poetry]
name = "paintings_classification"
version = "0.1.0"
description = ""
authors = ["nnoya <nnoya@fing.edu.uy>"]


[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
tensorboard = "^2.19.0"
numpy = ">=1.22,<1.27"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
